# python-wc-client

./: LICENSE  README.md  pyproject.toml  requirements-tests.txt
.github/workflows/: ci.yml  lint-and-test.yml  publish.yml
src/wc_client/: main.py
tests/: test_client.py  test_request.py
wc_client/: __init__.py  client.py  request.py
