[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wc_client"
description = "A small client for WooCommerce."
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Miguel Figueira Ferraz", email = "miguelfigueiraferraz@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Documentation = "https://github.com/miguelfferraz/python-woocommerce-client/tree/main#readme"
Source = "https://github.com/miguelfferraz/python-woocommerce-client"
Tracker = "https://github.com/miguelfferraz/python-woocommerce-client/issues"
