[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wc_client"
description = "A small client for WooCommerce."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Miguel Figueira Ferraz", email = "miguelfigueiraferraz@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["httpx>=0.25.0"]
dynamic = ["version"]


[project.urls]
Documentation = "https://github.com/miguelfferraz/python-wc-client/tree/main#readme"
Source = "https://github.com/miguelfferraz/python-wc-client"
Tracker = "https://github.com/miguelfferraz/python-wc-client/issues"

[tool.hatch.version]
path = "wc_client/__init__.py"
